# sports-card-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run_server.py  server.json  test_all.py
src/: __main__.py  advisor.py  analysis.py  ebay_client.py  grading.py  mlb_stats.py  nfl_stats.py  player_stats.py  server.py  trending.py  vintage.py
