[project]
name = "sports-card-agent"
version = "1.0.1"
description = "MCP server for sports trading card pricing, market analysis, grading ROI, investment advice, and player stats (NBA/NFL/MLB)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "rjexile", email = "rj@exilebrewing.com"},
]
keywords = ["mcp", "sports-cards", "trading-cards", "pricing", "nba", "nfl", "mlb", "arbitrage", "grading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "mcp[cli]",
    "httpx",
    "python-dotenv",
]

[project.scripts]
sports-card-agent = "src.server:main"

[project.urls]
Homepage = "https://github.com/rjexile/sports-card-agent"
Repository = "https://github.com/rjexile/sports-card-agent"
Issues = "https://github.com/rjexile/sports-card-agent/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
